--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -6,19 +6,23 @@
     <link rel="stylesheet" type="text/css" href="./style/main.css">
     <link rel="stylesheet" type="text/css" href="./style/base.css">
     <link rel="stylesheet" type="text/css" href="./style/business.css">
+    <link rel="stylesheet" type="text/css" href="./libs/kendo/kendo.common.min.css">
+    <link rel="stylesheet" type="text/css" href="./libs/kendo/kendo.default.min.css">
+    <script src="./libs/jquery/jquery.js"></script>
+	<script src="./libs/kendo/kendo.all.min.js"></script>
     <script data-main="./libs/config.js" src="./libs/require/require.js"></script>
 </head>
 <body>
 <div class="page" id="page">
-    <div id="header" class="header  ">
+    <div id="header" class="header relative">
 
     </div>
-    <div id="content" class="content">
+    <div id="content" class="content relative">
 
     </div>
-    <!--<div id="footer">
-
-    </div>-->
+    <div class="footer">
+		
+    </div>
 </div>
 </body>
 </html>
