--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!--<title>温湿度管理系统</title>-->
-    <link rel="stylesheet" type="text/css" href="./style/main.css">
-    <link rel="stylesheet" type="text/css" href="./style/base.css">
-    <link rel="stylesheet" type="text/css" href="./style/business.css">
-    
-    
-    <script data-main="./libs/config.js" src="./libs/require/require.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!--<title>温湿度管理系统</title>-->
+<link rel="stylesheet" type="text/css" href="./style/main.css">
+<link rel="stylesheet" type="text/css" href="./style/base.css">
+<link rel="stylesheet" type="text/css" href="./style/business.css">
+
+
+<script data-main="./libs/config.js" src="./libs/require/require.js"></script>
 </head>
 <body>
-<div class="page" id="page">
-    <div id="header" class="header relative">
-
-    </div>
-    <div id="content" class="content relative">
-
-    </div>
-    <div class="footer">
+	<div class="page" id="page">
+		<div id="header" class="header relative"></div>
+		<div id="content" class="content relative" style="padding-right: 0;padding-left: 0;"></div>
+		<div id="footer" class="footer" style="display:none;">
 		
-    </div>
-</div>
+		</div>
+	</div>
 </body>
 </html>
+
+
+
